--- a/index.html
+++ b/index.html
@@ -213,12 +213,16 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          Are you seeking a cutting-edge digital solution for your project or business? Whether you need:
+        Web development with high performance
+        Software engineering consultation
+        XR technology insights
+        Game design expertise
+        Technical problem-solving
+        I'm here to help! 👋
+As a versatile developer specializing in game development, XR technologies, and software engineering, I'm passionate about transforming innovative ideas into functional digital experiences.
+The quickest way to reach me is via email at benjamin.masena@gmail.com. I'll respond promptly and look forward to understanding how I can support your project goals.
+Let's create something amazing together! 😊
         </p>
         <!-- Replace the email with yours -->
         <a href="mailto:benjamin.masena@gmail.com" class="btn">benjamin.masena@gmail.com</a>
